# request-logging-proxy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  logger.rs  main.rs
test-data/: logged.http
