[package]
name = "request-logging-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Christian Beilschmidt <christian.beilschmidt@geoengine.de>"]
description = "A simple HTTP proxy that logs requests and responses"
license-file = "LICENSE"
repository = "https://github.com/geo-engine/request-logging-proxy"

# configure default clippy lints
[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
correctness = "deny"

# disable some pedantic lints
result_large_err = { level = "allow", priority = 1 }          # TODO: investigate this
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
non_ascii_literal = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
type_repetition_in_bounds = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# enable some restriction lints
dbg_macro = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

[dependencies]
async-trait = "0.1"
bytes = "1.4"
clap = { version = "4.4", features = ["env", "derive"] }
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }         # TODO: less features
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }           # TODO: less features
url = { version = "2.5", features = ["serde"] }          # TODO: remove
